# PalworldModManager

./: .gitignore  CHANGELOG.ko.md  CHANGELOG.md  LICENSE  README.ko.md  README.md  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: UE4SS-settings.ini
src-tauri/src/: app_update.rs  classify.rs  commands.rs  detection.rs  injection.rs  lib.rs  library.rs  logtail.rs  main.rs  manifest.rs  modstore.rs  pak_convert.rs  paths.rs  profiles.rs  retoc.rs  staging.rs  ue4ss.rs  updater.rs
tools/: fetch-retoc.sh  sign-and-package-dmg.sh
